// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/metadata-instance-editor/fields/Instance should correctly render templated metadata instance when cascadePolicy is {"canEdit": true, "id": "hello"} and isCascadingPolicyApplicable is false 1`] = `
<div>
  <div>
    <div
      class="collapsible-card is-open is-bordered"
    >
      <div
        class="collapsible-card-header has-sticky-header"
      >
        <button
          aria-expanded="true"
          class="btn-plain collapsible-card-title"
          data-resin-target="metadata-cardcollapse"
          type="button"
        >
          <span
            class="metadata-instance-editor-instance-title"
          >
            <svg
              aria-hidden="true"
              class="icon-metadata "
              focusable="false"
              height="16"
              role="presentation"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="fill-color"
                d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm-2.515-5.879L6.2 7.263l1.376 2.202a.5.5 0 0 0 .848 0L9.8 7.263l.715 2.858a.5.5 0 0 0 .97-.242l-1-4a.5.5 0 0 0-.909-.144L8 8.257 6.424 5.735a.5.5 0 0 0-.91.144l-1 4a.5.5 0 0 0 .971.242z"
                fill="#9f3fed"
                fill-rule="evenodd"
              />
            </svg>
            <span
              class="metadata-instance-editor-instance-title-text"
            />
          </span>
          <svg
            aria-hidden="true"
            class="icon-caret-down collapsible-card-header-caret"
            focusable="false"
            height="6"
            role="presentation"
            viewBox="0 0 10 6"
            width="8"
          >
            <path
              class="fill-color"
              d="M0 .5l5 5 5-5H0z"
              fill="#909090"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        aria-hidden="false"
        class="rah-static rah-static--height-auto"
        style="height: auto; overflow: visible;"
      >
        <div>
          <div
            class="collapsible-card-content"
          >
            <div
              class="loading-indicator-wrapper "
            >
              <form
                novalidate=""
              >
                <div
                  class="metadata-instance-editor-instance"
                >
                  <div
                    class="metadata-cascade-notice"
                  >
                    <div />
                  </div>
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      No Description Field
                    </dt>
                    <dd>
                      <div />
                    </dd>
                  </dl>
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      String Field
                    </dt>
                    <i
                      class="bdl-ReadOnlyMetadataField-desc"
                    >
                      example of a string field
                    </i>
                    <dd>
                      some string
                    </dd>
                  </dl>
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      Empty String Field
                    </dt>
                    <i
                      class="bdl-ReadOnlyMetadataField-desc"
                    >
                      example of an empty string field
                    </i>
                    <dd>
                      <div />
                    </dd>
                  </dl>
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      Float Field
                    </dt>
                    <i
                      class="bdl-ReadOnlyMetadataField-desc"
                    >
                      example of a float field
                    </i>
                    <dd>
                      1
                    </dd>
                  </dl>
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      Empty Float Field
                    </dt>
                    <i
                      class="bdl-ReadOnlyMetadataField-desc"
                    >
                      example of an empty float field
                    </i>
                    <dd>
                      <div />
                    </dd>
                  </dl>
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      Enum Field
                    </dt>
                    <i
                      class="bdl-ReadOnlyMetadataField-desc"
                    >
                      example of a enum field
                    </i>
                    <dd>
                      yes
                    </dd>
                  </dl>
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      Empty Enum Field
                    </dt>
                    <i
                      class="bdl-ReadOnlyMetadataField-desc"
                    >
                      example of an empty enum field
                    </i>
                    <dd>
                      <div />
                    </dd>
                  </dl>
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      Date Field
                    </dt>
                    <i
                      class="bdl-ReadOnlyMetadataField-desc"
                    >
                      example of a date field
                    </i>
                    <dd>
                      <div />
                    </dd>
                  </dl>
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      Empty Date Field
                    </dt>
                    <i
                      class="bdl-ReadOnlyMetadataField-desc"
                    >
                      example of an empty date field
                    </i>
                    <dd>
                      <div />
                    </dd>
                  </dl>
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      Multi Select Field
                    </dt>
                    <i
                      class="bdl-ReadOnlyMetadataField-desc"
                    >
                      example of a multi select field field
                    </i>
                    <dd>
                      yes, no
                    </dd>
                  </dl>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`features/metadata-instance-editor/fields/Instance should correctly render templated metadata instance when cascadePolicy is null and isCascadingPolicyApplicable is false 1`] = `
<div>
  <div>
    <div
      class="collapsible-card is-open is-bordered"
    >
      <div
        class="collapsible-card-header has-sticky-header"
      >
        <button
          aria-expanded="true"
          class="btn-plain collapsible-card-title"
          data-resin-target="metadata-cardcollapse"
          type="button"
        >
          <span
            class="metadata-instance-editor-instance-title"
          >
            <svg
              aria-hidden="true"
              class="icon-metadata "
              focusable="false"
              height="16"
              role="presentation"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="fill-color"
                d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm-2.515-5.879L6.2 7.263l1.376 2.202a.5.5 0 0 0 .848 0L9.8 7.263l.715 2.858a.5.5 0 0 0 .97-.242l-1-4a.5.5 0 0 0-.909-.144L8 8.257 6.424 5.735a.5.5 0 0 0-.91.144l-1 4a.5.5 0 0 0 .971.242z"
                fill="#0061d5"
                fill-rule="evenodd"
              />
            </svg>
            <span
              class="metadata-instance-editor-instance-title-text"
            />
          </span>
          <svg
            aria-hidden="true"
            class="icon-caret-down collapsible-card-header-caret"
            focusable="false"
            height="6"
            role="presentation"
            viewBox="0 0 10 6"
            width="8"
          >
            <path
              class="fill-color"
              d="M0 .5l5 5 5-5H0z"
              fill="#909090"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        aria-hidden="false"
        class="rah-static rah-static--height-auto"
        style="height: auto; overflow: visible;"
      >
        <div>
          <div
            class="collapsible-card-content"
          >
            <div
              class="loading-indicator-wrapper "
            >
              <form
                novalidate=""
              >
                <div
                  class="metadata-instance-editor-instance"
                >
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      No Description Field
                    </dt>
                    <dd>
                      <div />
                    </dd>
                  </dl>
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      String Field
                    </dt>
                    <i
                      class="bdl-ReadOnlyMetadataField-desc"
                    >
                      example of a string field
                    </i>
                    <dd>
                      some string
                    </dd>
                  </dl>
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      Empty String Field
                    </dt>
                    <i
                      class="bdl-ReadOnlyMetadataField-desc"
                    >
                      example of an empty string field
                    </i>
                    <dd>
                      <div />
                    </dd>
                  </dl>
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      Float Field
                    </dt>
                    <i
                      class="bdl-ReadOnlyMetadataField-desc"
                    >
                      example of a float field
                    </i>
                    <dd>
                      1
                    </dd>
                  </dl>
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      Empty Float Field
                    </dt>
                    <i
                      class="bdl-ReadOnlyMetadataField-desc"
                    >
                      example of an empty float field
                    </i>
                    <dd>
                      <div />
                    </dd>
                  </dl>
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      Enum Field
                    </dt>
                    <i
                      class="bdl-ReadOnlyMetadataField-desc"
                    >
                      example of a enum field
                    </i>
                    <dd>
                      yes
                    </dd>
                  </dl>
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      Empty Enum Field
                    </dt>
                    <i
                      class="bdl-ReadOnlyMetadataField-desc"
                    >
                      example of an empty enum field
                    </i>
                    <dd>
                      <div />
                    </dd>
                  </dl>
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      Date Field
                    </dt>
                    <i
                      class="bdl-ReadOnlyMetadataField-desc"
                    >
                      example of a date field
                    </i>
                    <dd>
                      <div />
                    </dd>
                  </dl>
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      Empty Date Field
                    </dt>
                    <i
                      class="bdl-ReadOnlyMetadataField-desc"
                    >
                      example of an empty date field
                    </i>
                    <dd>
                      <div />
                    </dd>
                  </dl>
                  <dl
                    class="bdl-ReadOnlyMetadataField"
                  >
                    <dt>
                      Multi Select Field
                    </dt>
                    <i
                      class="bdl-ReadOnlyMetadataField-desc"
                    >
                      example of a multi select field field
                    </i>
                    <dd>
                      yes, no
                    </dd>
                  </dl>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
